@@ -7,6 +7,7 @@ import pl.training.shop.payments.LocalMoney;
 import pl.training.shop.products.Product;
 import pl.training.shop.products.ProductType;
 
+import java.util.Collections;
 import java.util.List;
 
 @Log
@@ -33,7 +34,7 @@ public class Application {
             shopService.addProduct(BOOK_PRODUCT);
             log.info(shopService.getProducts(0, 100).toString());
 
-            var order = new Order(List.of(VIDEO_PRODUCT, BOOK_PRODUCT));
+            var order = new Order(Collections.emptyList());
             shopService.placeOrder(order);
             var payment = shopService.payForOrder(order.getId());
             log.info(payment.toString());
